--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-streamlit==1.32.2
-tensorflow==2.16.1
-numpy==1.26.4
-Pillow==10.3.0
+streamlit==1.30.0
+tensorflow==2.15.0
+numpy==1.23.5
+opencv-python==4.8.0.76
+Pillow==10.2.0
+
