--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 streamlit==1.30.0
-tensorflow==2.16.0
-numpy==1.23.5
-opencv-python==4.8.0.76
-Pillow==10.2.0
-
+tensorflow==2.15.0
+numpy==1.26.4
+Pillow==10.3.0
+opencv-python-headless==4.9.0.80
